# job-applier-app

./: .gitignore  .pylintrc  DOCUMENTATION.md  Dockerfile  IMPROVEMENTS.md  QUICKSTART.md  README.md  TECH_STACK.md  __init__.py  bucket-policy.json  build.sh  check-jobs.js  check-saved.js  conftest.py  content.js  cors.json  count_jobs.sql  db.sqlite3  debug_github.py  delete_jobs.ps1  errors.sty  extra.md  fix_github_import.md  fix_profiles.py  fly.toml  fly_install.sh  generate_documents.py  github_token_setup.md  lifecycle-policy.json  manage.py  manifest.json  package-lock.json  package.json  popup.html  popup.js  pyproject.toml  render.yaml  requirements.txt  test-auth.sh  test_celery_task.py
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  supervisord.conf
accounts/: models.py
accounts/migrations/: 0001_initial.py
apps/jobs/: models.py  schemas.py  tasks.py
apps/profiles/: models.py
apps/users/: models.py
config/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
config/settings/: __init__.py  base.py  development.py  oauth.py
core/: __init__.py  admin.py  apps.py  forms.py  middleware.py  models.py  serializers.py  signals.py  tasks.py  urls.py  views.py
core/management/: __init__.py
core/migrations/: 0001_initial.py  0002_alter_education_start_date.py  0002_auto_20250528_1740.py  0002_rename_skills_userprofile_address_and_more.py  0003_alter_userprofile_github_url_and_more.py  0003_update_education_start_date.py  0003_userprofile_bio_userprofile_email_and_more.py  0004_alter_certification_issue_date.py  0004_merge_20250406_1343.py  0004_remove_education_current_remove_project_current_and_more.py  0004_remove_userprofile_first_name_and_more.py  0005_alter_workexperience_description.py  0005_merge_20250406_1354.py  0005_remove_userprofile_years_of_experience_joblisting.py  0006_alter_certification_issue_date.py  0006_alter_project_technologies.py  0008_consolidate_fields.py  (+23 more)
extension/: background.js  content.js  manifest.json  popup.html  popup.js  settings.html  settings.js  utils.js
job_applier/: __init__.py  asgi.py  celery_config.py  settings.py  urls.py  wsgi.py
job_applier_app/: celery.py  celery_config.py  settings.py
job_vectors/: chroma.sqlite3
prisma/: schema.prisma
scripts/: activate.sh  init_codespace.sh  manage_services.sh  monitor_celery.sh  start_all_services.sh  start_production.sh  start_production_supervisor.sh  stop_all_services.sh  workspace-cleanup.sh
src/: asgi.py  context_processors.py  forms.py  middleware.py  settings.py  signals.py  urls.py  views.py  wsgi.py
temp_backup/: profile_views.py.bak
templates/: base.html
(+351 files in other folders)
