[build-system]
requires = ["setuptools>=42.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
^/docs
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.pylint.MASTER]
# Files or directories to be skipped
ignore = ["venv", "migrations", ".venv", "env"]

[tool.pylint.TYPECHECK]
# List of members which are set dynamically and missed by pylint inference system
generated-members = [
    "objects",
    "DoesNotExist",
    "id",
    "pk",
    "username",
    "email",
    "first_name",
    "last_name",
    "password",
    "save",
    "delete",
    "exists",
    "filter",
    "all",
    "get",
    "create",
    "count",
    "url",
    "get_*_display",
    "split"
]

[tool.pylint.MESSAGES_CONTROL]
# Disable specific warnings, errors, etc.
disable = [
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "line-too-long",
    "too-few-public-methods",
    "too-many-ancestors",
    "invalid-name",
    "no-member",  # For Django model attributes
    "not-callable",  # For Django model objects
    "unsubscriptable-object",  # For Django model objects
    "unsupported-assignment-operation",
    "not-an-iterable",
    "unexpected-keyword-arg"
] 